ices now does reencoding with liblame. Not exactly stable.. I think it's not entirely threadsafe. But.. seems to work fine, I'm sure we can get it really stable.

--- a/icecast/trunk/ices0/trunk/INSTALL
+++ b/icecast/trunk/ices0/trunk/INSTALL
@@ -35,6 +35,11 @@ want this enabled.
 Don't forget to run ldconfig after you've installed
 libshout on elf systems.
 
+For reencoding, you'll need libmp3lame, and the --with-lame* options
+in configure. That works fine for me most of the time, but I wouldn't
+exactly call it stable.
+
+
 Check the ./configure --help options for this.
 
 Good luck :)
