* Added FILES to describe all files relevant to ices. 	I skipped libshout files cause.. well.. it's not my code :) * Changed id3 get/set function interface to be more elegant and more threadsafe * Fixed daemon code and introduced setlinebuf() calls for logfile.

--- a/icecast/trunk/ices0/trunk/AUTHORS
+++ b/icecast/trunk/ices0/trunk/AUTHORS
@@ -13,3 +13,6 @@ Libshout was written and designed by
 Jack Moffitt    <jack@icecast.org>
 Chad Armstrong  <chad@icecast.org>
 Scott Manley    <szyzyg@icecast.org>
+
+The file rand.c used for randomizing files
+is Copyright (C) 1998 Erik Greenwald <br0ke@math.smsu.edu>
