* Updated FAQ with index and #10 (Where do the ices files go?) * Added dynamic linking to the perl module (use Module works now). * Ices now exits after 10 consecutive file errors. * Small perl changes in configure.in to get the dynamic libraries. * Now reports if libxml is missing when user specifies configfile.

--- a/icecast/trunk/ices0/trunk/CHANGES
+++ b/icecast/trunk/ices0/trunk/CHANGES
@@ -1,3 +1,9 @@
+- 0.0.1b5	2000-08-29
+	- Perl module now supports dynamic loading of modules (e.g "use Socket")
+	- Ices now exits after 10 consecutive filename or other errors. (Removes spamming problems)
+- 0.0.1b4	2000-08-24
+	- New options to change sample rate and number of channels
+	  when reencoding.
 - 0.0.1b3	2000-08-08
 	- Reencoding fixes, commented config file and README.playlist
 	- Changed perl module to use user specified module
