ices lives once more (it was only mostly dead). builds too.
Most makefile changes were to let ices build outside of the source dir.
Also use libiceavl and libicethread, not libavl and libthread. Correct
locations of these libraries.

AUTHORS:
	added me as current maintainer. Hi mom!
INSTALL:
	Make CVS instructions match reality.
src/id3.c:
	rename thread_mutex_(un)?lock to thread_(un)?lock_mutex, like
	thread.h calls them.
src/setup.c:
	No such function thread_is_initialized (). Simulated with static
	variable. Fixed obvious mutex locking problem in shutdown?

--- a/icecast/trunk/ices0/trunk/INSTALL
+++ b/icecast/trunk/ices0/trunk/INSTALL
@@ -28,11 +28,7 @@ like this:
 
 cvs co ices
 cd ices
-cvs co resolver thread
-cd thread
-cvs co avl
-cd ..
-cvs co libshout
+cvs co resolver thread avl log libshout
 
 ./autogen.sh
 make
