Sunday in the park with autoconf (not as picturesque as it sounds) Also not finished yet <sigh>
Among numerous cleanups in configure.in, I also introduced backward
compatibility to lame 3.88beta (the last release). Also made configure
notice if we don't have at least that version, and disable reencoding.

Made reencode.c not get linked in if lame isn't used. Bracketing the
whole file in #ifdef HAVE_LIBLAME was kind of cheezy. Also removed a
bunch of useless functions.

I hope I didn't break the perl stuff, but it was insanely messy.

src/id3.c:
	the metadata update delay was causing the main thread to sleep,
	not the update thread (somewhat counterproductive) - fixed.
	Metadata is now correct for the first song, yay!
TESTED:
	Removed configurations using old LAME, they wouldn't work now.
INSTALL:
	Updated instructions based on my autoconf frobbing
README:
	Advise user she needs at least LAME 3.88beta.

--- a/icecast/trunk/ices0/trunk/INSTALL
+++ b/icecast/trunk/ices0/trunk/INSTALL
@@ -1,21 +1,20 @@
 BUILDING FROM SOURCE
 ~~~~~~~~~~~~~~~~~~~~
 Do ./configure, optionally with --with-perl, --with-python and --with-lame, 
-if you want support for that.
+if you want support for them (but configure will try to detect them
+automatically).
 
 If for some reason the configure script doesn't find the include files for
 python, perl or lame, you have to specify the path to these with
 --with-something-includes and --with-something-libraries.
 
-It's probably a good idea to do this anyway.
-
 ./configure --help will help you out with the exact syntax for those options.
 
-To configure it all, I use
-./configure --with-perl --with-python --with-lame --with-lame-includes=/home/eel/lame --with-lame-libraries=/home/eel/lame
+To configure it all on my debian/sid system with python 2, I use
+./configure --with-python-includes=/usr/include/python2
 
-My python is in /usr/include/python1.5, and perl in /usr/lib/perl/perl5/..., but the configure script
-finds it there so I don't have to specify the path for those.
+I installed lame as a debian package so lame.h is in /usr/include/lame/lame.h
+and libmp3lame.a is in /usr/lib. configure finds everything automatically.
 
 Then, do 'make' and everything should be fine.
 
