Use my icecast.org address

--- a/icecast/trunk/ices0/trunk/AUTHORS
+++ b/icecast/trunk/ices0/trunk/AUTHORS
@@ -17,4 +17,4 @@ Scott Manley    <szyzyg@icecast.org>
 The file rand.c used for randomizing files
 is Copyright (C) 1998 Erik Greenwald <br0ke@math.smsu.edu>
 
-ices is currently maintained by Brendan Cully <brendan@kublai.com>
+ices is currently maintained by Brendan Cully <brendan@icecast.org>
