--- a/icecast/trunk/ices0/trunk/CHANGES
+++ b/icecast/trunk/ices0/trunk/CHANGES
@@ -1,3 +1,12 @@
+- 0.2		2001-06-29
+	- This is a development release. It is not guaranteed to be as stable
+	  as 0.1.
+	- Multiple streams are supported. Add multiple stream sections to
+	  ices.conf or use multiple -m options on the command line. See the
+	  man page for details.
+	- Oh yeah, there's a man page.
+	- ices can decode ogg vorbis files and reencode them as MP3
+	- New ices_get_metadata function added for playlist scripts.
 - 0.1.0		2001-06-15
 	- Reencoder updated to new LAME API of 3.88.
 	- new option --with-xmlconfig when building to locate xml libraries
