--- a/icecast/trunk/ices0/trunk/INSTALL
+++ b/icecast/trunk/ices0/trunk/INSTALL
@@ -10,8 +10,8 @@ python, perl or lame, you have to specify the path to these with
 
 ./configure --help will help you out with the exact syntax for those options.
 
-To configure it all on my debian/sid system with python 2, I use
-./configure --with-python-includes=/usr/include/python2
+To configure it all on my debian/sid system with python 2.1, I use
+./configure --with-python-includes=/usr/include/python2.1
 
 I installed lame as a debian package so lame.h is in /usr/include/lame/lame.h
 and libmp3lame.a is in /usr/lib. configure finds everything automatically.
@@ -27,7 +27,7 @@ like this:
 
 cvs co ices
 cd ices
-cvs co resolver thread avl log libshout
+cvs co resolver log libshout
 
 ./autogen.sh
 make
@@ -50,4 +50,4 @@ exactly call it stable.
 
 Check the ./configure --help options for this.
 
-Good luck :)
+Good luck.
