--- a/icecast/trunk/ices0/trunk/TODO
+++ b/icecast/trunk/ices0/trunk/TODO
@@ -1,9 +1,9 @@
 * Improved error handling
 * Make the scripting engines, and vorbis and MP3 reencoding, run-time linkable
 * Investigate preventing chirps. These can happen if the previous file ended in
-  the middle frame. Possibly padding out to the frame length with NULL would fix it.
+  the middle of a frame. Possibly padding out to the frame length with NULL would fix it.
   A really cheap hack would be to just dump the maximum possible frame size worth of
   NULLs into the stream. In practice, this might not be any different since the
   player should just ignore everything up until the next sync word.
 
-$Id: TODO,v 1.3 2003/03/16 05:50:34 brendan Exp $
+$Id: TODO,v 1.4 2003/03/16 08:32:34 brendan Exp $
