--- a/icecast/trunk/ices0/trunk/README
+++ b/icecast/trunk/ices0/trunk/README
@@ -11,7 +11,7 @@
          4. Reencoding 
     D. Configuring 
          1. Command line options 
-         2. Configuration file (icec.conf) 
+         2. Configuration file (ices.conf) 
     E. Licensing 
     F. Developers resources 
                                   _______
