--- a/icecast/trunk/ices0/trunk/INSTALL
+++ b/icecast/trunk/ices0/trunk/INSTALL
@@ -1,5 +1,8 @@
 BUILDING FROM SOURCE
 ~~~~~~~~~~~~~~~~~~~~
+You must install libshout 2.0 before building ices. Get it from the same place
+you found ices, or from www.icecast.org.
+
 Do ./configure, optionally with --with-perl, --with-python and --with-lame, 
 if you want support for them (but configure will try to detect them
 automatically).
@@ -9,9 +12,6 @@ python, perl or lame, you have to specify the path to these with
 --with-something-includes and --with-something-libraries.
 
 ./configure --help will help you out with the exact syntax for those options.
-
-To configure it all on my debian/sid system with python 2.1, I use
-./configure --with-python-includes=/usr/include/python2.1
 
 I installed lame as a debian package so lame.h is in /usr/include/lame/lame.h
 and libmp3lame.a is in /usr/lib. configure finds everything automatically.
@@ -26,18 +26,14 @@ If you're installing ices from cvs, you need to do something
 like this:
 
 cvs co ices
-cd ices
-cvs co libshout
 
 ./autogen.sh
 make
 
 And you'll hopefully have a ices binary in src/
 
-For configfiles, ices depends on libxml, and I've
-only tested it with libxml version 2.
-Make sure you've got xml-config in your path and
-that setup should be fine.
+For config files, ices depends on libxml2.
+Make sure you've got xml-config in your path.
 
 For playlist handlers, ices can optionally use
 python or perl.
