Don't reset the encoder unless we have to. This helps considerably with the popping between tracks.

--- a/icecast/trunk/ices0/NEWS
+++ b/icecast/trunk/ices0/NEWS
@@ -1,3 +1,5 @@
+	* Crossfader added.
+	* Tested with LAME 3.96
 0.3     2003-07-13
 	* Updated to libshout2, which brings icecast2 compatibility.
 	* ices will now attempt to trim junk and short frames from MP3 files,
