--- a/icecast/trunk/ices0/TODO
+++ b/icecast/trunk/ices0/TODO
@@ -1,4 +1,5 @@
+* MP4: metadata, piped input, mono
 * Improved error handling
 * Make the scripting engines, and vorbis and MP3 reencoding, run-time linkable
 
-$Id: TODO,v 1.5 2003/03/19 18:58:24 brendan Exp $
+$Id$
